# bokeh

./: .gitignore  CMakeLists.txt
report/: bibliography.bib  document.tex
scenes/: 100_f1_35.la  100_f1_35_test.la  empty.scn  materials.mtl  reflective_buns_1k.scn  reflective_buns_1k_lens.scn  reflective_buns_1k_lens_test.scn  reflective_buns_40k.scn  reflective_spheres.scn  spheres_array.scn  spheres_array_tiny_lights.scn
shaders/: dbviz.frag  dbviz.vert  mesh_basic_gouraud.frag  mesh_basic_gouraud.vert
src/: bokeh_canvas.cpp  bokeh_canvas.h  camera.cpp  camera.h  canvas.cpp  canvas.h  cmj_sampler.cpp  cmj_sampler.h  debug_viz.cpp  debug_viz.h  image.h  kd_tree.cpp  kd_tree.h  lens_assembly.cpp  lens_assembly.h  lens_surface.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  primitive.cpp  primitive.h  raytracing.cpp  raytracing.h  scene.cpp  scene.h  shader_store.cpp  shader_store.h  threads.cpp  threads.h  util.cpp  util.h
